--- a/src/app/.env
+++ b/src/app/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_BASE_URL=http://localhost:4000/api
+# REACT_APP_API_BASE_URL=http://localhost:4000/api
+REACT_APP_API_BASE_URL=https://sb-backend.cyclic.app/api
