--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,18 @@
 {
-    "build": {
-        "optimize": {
-            "images": false
+    "builds": [
+        {
+            "src": "next.config.js",
+            "use": "@vercel/next"
         }
-    }
+    ],
+    "routes": [
+        {
+            "src": "/images/(.*)",
+            "dest": "/public/images/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/$1"
+        }
+    ]
 }
