--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+    "build": {
+        "optimize": {
+            "images": false
+        }
+    },
     "builds": [
         {
             "src": "next.config.js",
