--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "quill": "^1.3.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "swiper": "^11.1.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
