--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-quill": "^2.0.0",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
