--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=https://api.bikedekho.com/v1/pwa
 NEXT_PUBLIC_MEDIA_URL=https://bd.gaadicdn.com/pwa/img
+NODE_ENV=development
