--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "node server.js",
     "lint": "next lint",
     "export": "next build && next export",
     "tailwindcss": "npx tailwindcss build -i ./styles/tailwind.css -o ./styles/output.css"
@@ -15,6 +15,7 @@
     "antd": "^5.15.4",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.0.24",
     "moment": "^2.30.1",
     "next": "^12.3.4",
